--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,17 @@ doc/myAccounting.toc
 *.json~
 datafiles/test0.json
 dbase/accounting.db
+datafiles/accounts_db_mev.json
+datafiles/accounts_db_new_mev.json
+datafiles/accounts_db_new_mev_2015.json
+datafiles/accounts_db_new_mev_2016.json
+datafiles/accounts_db_new_mev_2017.json
+datafiles/accounts_db_new_mev_2018.json
+datafiles/accounts_db_new_mev_2019.json
+datafiles/accounts_db_new_mev_2020.json
+datafiles/accounts_db_new_mev_2021.json
+datafiles/accounts_db_new_mev_2022.json
+datafiles/accounts_db_new_mev_2023.json
+dbase/accounting.db
+dbase/accounting.db
+config/colors.html~
